--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <!-- Header Section Start -->
     <header>
-        <nav class="nav_sec">
-            <div class="logo_text">
-                <a href="#"><span style="color:#F25836">A</span>rif<span style="color:#F25836">S</span>hahriyar<span style="color:#F25836">N</span>ader</a>
+        <nav class="flex flex-col items-center justify-between px-5 py-5 bg-[#333] md:flex-row nav_sec">
+            <div>
+                <a class="text-3xl text-white" href="#"><span style="color:#F25836">A</span>rif<span style="color:#F25836">S</span>hahriyar<span style="color:#F25836">N</span>ader</a>
             </div>
             <div class="menu_bar">
-                <ul>
+                <ul class="flex flex-col pt-10 items-center gap-18 md:gap-20 text-[#fff] cursor-pointer font-bold md:flex-row md:pt-0">
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#project">Project</a></li>
@@ -29,38 +30,46 @@
     <!-- Header Section End -->
 
      <!-- Hero Section Start -->
-     <section class="hero_section">
-        <div class="hero_text">
-            <h2>Hi, I'm Arif Shahriyar Nader</h2>
-            <p>A Passionate Developer and Tech Enthusiast from Bangladesh,<br>
+     <section class="flex self-center justify-between flex-col p-24 md:flex-row hero_section">
+        <div class="py-14 px-20 hero_text">
+            <h2 class="text-[#333333] pt-14 text-4xl font-bold">Hi, I'm Arif Shahriyar Nader</h2>
+            <p class="text-lg pt-5">A Passionate Developer and Tech Enthusiast from Bangladesh,<br>
             I always love to learn new technologies and I'm also a quick learner.</p>
-           <div class="resume">
-            <a href="/assets/files/ArifShahriyarNaderResume.pdf" target="_blank" class="resume_download">Download Resume</a>
+           <div class="mt-10 resume">
+            <a href="/assets/files/ArifShahriyarNaderResume.pdf" target="_blank"
+             class="py-2.5 px-5 w-56 flex flex-col md:flex-row text-lg font-bold border-2
+              border-solid border-orange-500 rounded-md
+               cursor-pointer hover:bg-[#333333] hover:text-[#fff]
+              resume_download">Download Resume</a>
            </div>
         </div>
-        <div class="hero_img">
-            <img src="assets/images/suit-nader.png" alt="Nader" class="hero_image">
+        <div class="pt-12 pr-20 hero_img">
+            <img src="assets/images/suit-nader.png" alt="Nader"
+             class="w-45 hero_image">
         </div>
      </section>
      <!-- Hero Section End -->
       <!-- Skills sec Start -->
-     <section class="skills_sec">
-        <h1>Skills:</h1>
-        <div class="skills_container">
-            <div class="skill">
-                <h2>HTML</h2>
-                <p>HTML Tags, semantic elements, html5, HTML Form,<br>
-                    modern web technology.
-                   </p>
+     <section class="bg-[#F0F0F0] border-solid border-2 border-custom:[#F0F0F0]
+     p-12 my-20 mx-20 rounded-lg skills_sec">
+        <h1 class="text-[#000000] text-3xl font-bold">Skills:</h1>
+        <div class="grid grid-cols-1 py-7 gap-4 md:grid-cols-3 md:gap:0 skills_container">
+            <div class="bg-[#fff] p-5 text-center border-solid
+             border-1 border-custom:[#ccc] rounded-lg mx-auto skill">
+                <h2 class="p-3.5 text-[#F25836] font-bold">HTML</h2>
+                <p class="text-sm p-2.5">HTML Tags, semantic elements, html5, HTML<br> Form,<br>
+                    modern web technology.</p>
             </div>
-            <div class="skill">
-                <h2>CSS</h2>
-                <p>CSS Flexbox, grid, including advanced selectors,<br> multiple column layouts, animations,
+            <div class="bg-[#fff] p-5 text-center border-solid
+             border-1 border-custom:[#ccc] rounded-lg mx-auto skill">
+                <h2 class="p-3.5 text-[#F25836] font-bold">CSS</h2>
+                <p class="text-sm p-2.5">CSS Flexbox, grid, including advanced selectors,<br> multiple column layouts, animations,
                      <br> gradients, shadows.</p>
             </div>
-            <div class="skill">
-                <h2>JavaScript</h2>
-                <p>Modern JavaScript with Asynchronous  Behaviour,<br>
+            <div class="bg-[#fff] p-5 text-center border-solid
+            border-1 border-custom:[#ccc] rounded-lg mx-auto skill">
+                <h2 class="p-3.5 text-[#F25836] font-bold">JavaScript</h2>
+                <p  class="text-sm p-2.5">Modern JavaScript with Asynchronous  Behaviour,<br>
                     Hoisting, Scopes, Arrow Functions
                     </p>
             </div>
@@ -68,73 +77,98 @@
      </section>
      <!-- Skills Sec End -->
       <!-- Project Sec Start -->
-      <section class="projects_sec">
-        <h1>My Projects</h1>
-        <div class="project_container">
-            <div class="project">
-                <h3>Booking Reservation App</h3>
-                <p>This project was final year project at my University.<br>
+      <section class="bg-[#F0F0F0] p-12 my-20 mx-20 border-solid border-2
+      border-custom-[#F0F0F0] rounded-lg projects_sec">
+        <h1 class="text-[#000000] text-3xl font-bold">My Projects:</h1>
+        <div class="grid grid-cols-1 md:grid-cols-3 pt-7 pb-7 gap-5 project_container">
+            <div class="bg-[#fff] p-5 text-center border-solid
+             border-1 border-custom-[#ccc] rounded-lg project">
+                <h3 class="p-4 text-[#F25836] font-bold">Booking Reservation App</h3>
+                <p class="p-2.5 text-sm">This project was final year project at my University.<br>
                     This is a Full Stack/Mern Stack project.</p>
-                    <a href="https://github.com/arifshahriyarnader/booking_reservation"  target="_blank">
+                    <a href="https://github.com/arifshahriyarnader/booking_reservation"
+                     target="_blank" class="text-lg cursor-pointer">
                         Github</a>
                         | 
-                        <a href="https://github.com/arifshahriyarnader/booking_reservation" target="_blank">
+                        <a href="https://github.com/arifshahriyarnader/booking_reservation"
+                         target="_blank"  class="text-lg cursor-pointer">
                             Live Link</a>
                  </div>
-                 <div class="project">
-                    <h3>Restaurant Bill System App</h3>
-                    <p>This project was Project 200 at my University.<br>
+                 <div class="bg-[#fff] p-5 text-center border-solid
+                 border-1 border-custom-[#ccc] rounded-lg project">
+                    <h3 class="p-4 text-[#F25836] font-bold">Restaurant Bill System App</h3>
+                    <p class="p-2.5 text-sm">This project was Project 200 at my University.<br>
                         This is a C Programming project.</p>
-                        <a href="https://github.com/arifshahriyarnader/restaurant-bill-system" target="_blank">
+                        <a href="https://github.com/arifshahriyarnader/restaurant-bill-system"
+                         target="_blank" class="text-lg cursor-pointer">
                             Github</a>
                             | 
-                            <a href="https://github.com/arifshahriyarnader/restaurant-bill-system" target="_blank">
+                            <a href="https://github.com/arifshahriyarnader/restaurant-bill-system"
+                             target="_blank" class="text-lg cursor-pointer">
                                 Live Link</a>
                      </div>
-                     <div class="project">
-                        <h3>Database Management Project</h3>
-                        <p>This project was Database Management project at my University.<br>
+                     <div class="bg-[#fff] p-5 text-center border-solid
+                     border-1 border-custom-[#ccc] rounded-lg project">
+                        <h3 class="p-4 text-[#F25836] font-bold">Database Management Project</h3>
+                        <p class="p-2.5 text-sm">This project was Database Management project at my University.<br>
                             This is a CRUD  Operation Project.</p>
-                            <a href="https://github.com/arifshahriyarnader/Laravel_crud" target="_blank">
-                                Github</a>
+                            <a href="https://github.com/arifshahriyarnader/Laravel_crud"
+                              target="_blank" class="text-lg cursor-pointer" >
+                                Github
+                            </a>
                                 | 
-                                <a href="https://github.com/arifshahriyarnader/Laravel_crud" target="_blank">
+                                <a href="https://github.com/arifshahriyarnader/Laravel_crud"
+                                 target="_blank" class="text-lg cursor-pointer">
                                     Live Link</a>
                          </div>
         </div>
       </section>
       <!-- Project Sec End -->
-       <section class="contact_sec">
+       <section class="mx-20 my-20 p-12 contact_sec">
         <div class="contact_heading">
-        <h2>Get in Touch</h2>
-        <p>Let's Collaborate and Create Something Amazing Together</p>
+        <h2 class="pt-2.5">Get in Touch</h2>
+        <p class="pt-2.5 text-sm">Let's Collaborate and Create Something Amazing Together</p>
         </div>
-        <div class="contact_container">
-            <div class="contact_form">
+        <div class="grid grid-cols-1 md:grid-cols-2 contact_container">
+            <div class="mt-5 contact_form">
                 <form
                 action="https://formspree.io/f/xzbnnrlk"
-                method="POST"
+                method="POST" class="flex flex-col"
               >
-              <input type="name" name="name" placeholder="Your Name" required>
+              <input type="name" name="name" placeholder="Your Name"
+              class="w-60 md:w-96 p-1 text-base cursor-pointer"
+               required>
              <br>
-               <input type="email" name="email" placeholder="Your Email" required>
+               <input type="email" name="email" placeholder="Your Email"
+               class="w-60 md:w-96 p-1 text-base cursor-pointer" required>
                 <br>
-                    <input type="phone" name="phone" placeholder="Your Phone" required>
+                    <input type="phone" name="phone" placeholder="Your Phone"
+                    class="w-60 md:w-96 p-1 text-base cursor-pointer" required>
                  <br>
-                  <textarea name="message" placeholder="Your Message" required></textarea>
+                  <textarea name="message" placeholder="Your Message"
+                  class="h-24 w-60 md:w-96 p-1 text-base" required></textarea>
                   <br>
                 <!-- your other form fields go here -->
-                <button type="submit">Send Message</button>
+                <button type="submit"
+                 class="bg-[#F25836] text-[#F0F0F0] w-48 py-3.5 px-8 
+                 text-lg border-solid border-2 border-custom-[#333] rounded-lg
+                  font-bold cursor-pointer hover:bg-[#333333]">
+                 Send Message
+                </button>
               </form>
             </div>
-            <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1809.6187648034277!2d91.89127118855666!3d24.88987822756073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751ab4afc87ed91%3A0xdf7baeec18880ec0!2sA%20Block%2C%20Sylhet!5e0!3m2!1sen!2sbd!4v1718305005382!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="relative w-full h-96">
+                <iframe class="absolute top-0 left-0 w-full h-full"
+                    src=
+                    "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1809.6187648034277!2d91.89127118855666!3d24.88987822756073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751ab4afc87ed91%3A0xdf7baeec18880ec0!2sA%20Block%2C%20Sylhet!5e0!3m2!1sen!2sbd!4v1720101187268!5m2!1sen!2sbd"
+                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+                </iframe>
             </div>
         </div>
        </section>
-
+       <!-- Footer Sec -->
        <footer class="footer_sec">
-            <div class="footer_text">
+            <div class="bg-[#333333] p-7 text-center text-[#fff] text-lg footer_text">
                 <p>&copy; Arif Shahriyar Nader All rights reserved 2024</p>
             </div>
        </footer>
